<resources>
    <string name="app_name">App2.0</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="sort_class">Sort by Class</string>
    <string name="sort_due">Sort by Date</string>

    <string name="class_edit_save_button">Save</string>
    <string name="new_class_entry">Course Number</string>
    <string name="new_prof_entry">Professor</string>
    <string name="new_time_entry">Time</string>

    <string name="exam_save_button">Save</string>
    <string name="exam_title_button">Exam Title</string>
    <string name="exam_location_button">Location</string>
    <string name="exam_time_button">Time</string>
    <string name="exam_due_date">Due Date</string>

    <string name="assignment_save_button">Save</string>
    <string name="assignment_title_button">Assignment Title</string>
    <string name="assignment_course_button">Course</string>
    <string name="assignment_due_date">Due Date</string>

    <string name="menu_classes">Classes</string>
    <string name="menu_exams">Exams</string>
    <string name="menu_assignments">Assignments</string>
    <string name="menu_todo">To Do</string>
</resources>