<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_classes"
            android:icon="@drawable/menu_class_pic"
            android:title="@string/menu_classes" />
        <item
            android:id="@+id/nav_exam"
            android:icon="@drawable/menu_exam_pic"
            android:title="@string/menu_exams" />
        <item
            android:id="@+id/nav_assignment"
            android:icon="@drawable/menu_assignment_pic"
            android:title="@string/menu_assignments" />
        <item
            android:id="@+id/nav_todo"
            android:icon="@drawable/menu_todo_pic"
            android:title="@string/menu_todo" />
    </group>
</menu>