<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <EditText
        android:id="@+id/newCourseNumText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:hint="@string/new_class_entry"
        android:textSize="18sp"/>

    <Button
        android:id="@+id/newClassSaveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/newCourseNumText"
        android:textSize="16sp"
        android:layout_alignParentEnd="true"
        android:background="@android:color/transparent"
        android:text="@string/class_edit_save_button"
        android:textAllCaps="false"
        android:textColor="@android:color/darker_gray" />

    <EditText
        android:id="@+id/newProfessorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/newCourseNumText"
        android:layout_marginTop="20dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="18sp"
        android:hint="@string/new_prof_entry" />

    <EditText
        android:id="@+id/newTimeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/newCourseNumText"
        android:layout_alignStart="@id/newProfessorText"
        android:layout_marginStart="161dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="79dp"
        android:layout_toStartOf="@+id/newClassSaveButton"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="18sp"
        android:hint="@string/new_time_entry"/>

</RelativeLayout>