<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <EditText
        android:id="@+id/newExamText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/newExamLocation"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="12dp"
        android:background="@null"
        android:gravity="center"
        android:hint="@string/exam_title_button"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#009600"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/newExamLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:background="@null"
        android:gravity="center"
        android:hint="@string/exam_location_button"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#009600"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/newExamSaveButton"
        android:layout_width="107dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/newExamText"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="18dp"
        android:background="@android:color/transparent"
        android:text="@string/exam_save_button"
        android:textAllCaps="false"
        android:textColor="@android:color/darker_gray"
        android:textSize="18sp" />


    <TextView
        android:id="@+id/newExamDateText"
        android:layout_width="112dp"
        android:layout_height="40dp"
        android:layout_below="@+id/newExamText"
        android:layout_marginStart="28dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="28dp"
        android:layout_toStartOf="@+id/newExamSaveButton"
        android:layout_toEndOf="@+id/newExamTimeText"
        android:gravity="center"
        android:hint="@string/exam_due_date"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/newExamTimeText"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_below="@+id/newExamText"
        android:layout_alignParentStart="true"
        android:layout_marginTop="18dp"
        android:gravity="center"
        android:hint="@string/exam_time_button"
        android:textSize="18sp" />

</RelativeLayout>
