<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <EditText
        android:id="@+id/newAssignmentText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@null"
        android:hint="@string/assignment_title_button"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#009600"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/newAssignmentSaveButton"
        android:layout_width="107dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/newAssignmentText"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/transparent"
        android:text="@string/assignment_save_button"
        android:textAllCaps="false"
        android:textColor="@android:color/darker_gray"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/newAssignmentCourseButton"
        android:layout_width="145dp"
        android:layout_height="45dp"
        android:layout_below="@+id/newAssignmentText"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="20dp"
        android:layout_toStartOf="@+id/newAssignmentDateText" />

    <TextView
        android:id="@+id/newAssignmentDateText"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_below="@+id/newAssignmentText"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="20dp"
        android:layout_toStartOf="@+id/newAssignmentSaveButton"
        android:gravity="center"
        android:hint="@string/assignment_due_date"
        android:textSize="18sp" />

</RelativeLayout>
